--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -6,5 +6,6 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v1
+      - run: brew install pipenv
       - run: pipenv run test_install
       - run: pipenv run test
