--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -6,7 +6,8 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v1
+      - run: which python
       - run: brew install pipenv
       - run: sudo easy_install pip
-      - run: pipenv run test_install
+      - run: sudo /usr/bin/python -m pip install mock --upgrade --ignore-installed six
       - run: pipenv run test
