--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -7,7 +7,10 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - run: which python
+      - run: python -V
       - run: brew install pipenv
       - run: sudo easy_install pip
-      - run: sudo /usr/bin/python -m pip install mock --upgrade --ignore-installed six
-      - run: pipenv run test
+      - run: which pip
+      - run: pip -V
+      - run: sudo pip install mock --upgrade --ignore-installed six
+      - run: python -m unittest discover --start-directory ./tests/scripts
