--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -10,6 +10,19 @@ jobs:
       - run: xcodebuild -version
       - run: which python
       - run: python -V
+      - name: brew cache
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.brew-cache.outputs.dir }}
+          key: ${{ runner.os }}-${{ hashFiles('Brewfile') }}
+      - name: pip cache
+        uses: actions/cache@v1
+        if: startsWith(runner.os, 'macOS')
+        with:
+          path: ~/Library/Caches/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
       - run: brew install pipenv
       - run: sudo easy_install pip
       - run: which pip
