--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -5,11 +5,12 @@ jobs:
   test:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v1
-      - run: sw_vers
-      - run: xcodebuild -version
-      - run: which python
-      - run: python -V
+      - name: checkout
+        uses: actions/checkout@v1
+        - run: sw_vers
+        - run: xcodebuild -version
+        - run: which python
+        - run: python -V
       - name: brew cache
         uses: actions/cache@v1
         with:
@@ -23,10 +24,12 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-      - run: brew install pipenv
-      - run: sudo easy_install pip
-      - run: which pip
-      - run: pip -V
-      - run: sudo pip install mock --upgrade --ignore-installed six
-      - run: sudo pip install pyobjc
-      - run: python -m unittest discover --start-directory ./tests/scripts
+      - name: install task
+        - run: brew install pipenv
+        - run: sudo easy_install pip
+        - run: which pip
+        - run: pip -V
+        - run: sudo pip install mock --upgrade --ignore-installed six
+        - run: sudo pip install pyobjc
+      - name: run test
+        run: python -m unittest discover --start-directory ./tests/scripts
