--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,7 +17,7 @@ jobs:
           npm install
       - name: test task
         run: |
-          npm lint
-          npm test
+          npm run lint
+          npm run test
       - name: build task
         run: npm run package
