--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "fork-ts-checker-webpack-plugin": "3.1.1",
     "jest": "24.9.0",
     "jest-transform-stub": "2.0.0",
-    "node-loader": "0.6.0",
+    "native-addon-loader": "2.0.1",
     "prettier": "1.19.1",
     "prettier-stylelint": "0.4.2",
     "react-test-renderer": "16.12.0",
